examples/test/testpolicy6924.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6924
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key48: value42
      key2: value46
      key42: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value18
      podSelector:
        matchLabels:
          key9: value19
          key39: value41
